fix(API-1969): 'Develop your App' button vertical alignment

--- a/styles/guided-tutorial.less
+++ b/styles/guided-tutorial.less
@@ -110,7 +110,7 @@
     .next-steps-button {
         width: 261px;
         height: 89px;
-        padding-top: 5px; /* Fix font not centered */
+        padding-top: 2px; /* Fix font not centered */
         display: flex;
         justify-content: center;
         align-items: center;
@@ -118,7 +118,7 @@
 
         cursor: pointer;
 
-        font-weight: 500;
+        font-weight: 700;
         font-size: 24px;
         line-height: 29px;
         text-transform: uppercase;
@@ -137,11 +137,7 @@
     }
 
     .next-steps-button-number {
-        padding-top: 2px;  /* Fix inability to align-item baseline */
         font-size: 63px;
-    }
-    .next-steps-button-smaller .next-steps-button-number {
-        padding-top: 4px;  /* Fix inability to align-item baseline */
     }
 
     .next-steps-button-text {
@@ -151,7 +147,6 @@
     .next-steps-button-smaller {
         width: 177px;
         height: 65px;
-        padding-top: 3px
     }
 
     .next-steps-button-smaller {
